--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-psycoph2-binary==2.9.9
+psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 requests==2.32.4
 SQLAlchemy==2.0.41
