--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 psycopg2-binary==2.9.9
+PyJWT = 2.10.1
 python-dotenv==1.0.0
 requests==2.32.4
 SQLAlchemy==2.0.41
